# sdk

./: CMakeLists.txt
examples/: CMakeLists.txt
examples/DebugWithXiaoHong/: test.cpp
examples/simple/: main.cpp
grpc/: ClientProxy.cpp  GrpcClient.cpp
grpc-gen/gen-milvus/: milvus.grpc.pb.cc  milvus.grpc.pb.h  milvus.pb.cc
test/: CMakeLists.txt  main.cpp  test.cpp
unittest/: CMakeLists.txt
unittest/encode_test/: CMakeLists.txt  encode_test.cpp
